# CppftI

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Ch01_CppFundamentals/: adding_machine.cpp
Ch01_CppFundamentals/calculating_phi/: calculating_phi.cpp
Ch02_Data/type_promotion/: type_promotion.cpp
Ch03_Operators/binary_printout/: binary_printout.cpp
Ch03_Operators/computer_guesses_the_number/: Makefile  computer_guesses_the_number.cpp
Ch03_Operators/guess_the_number_game/: Makefile  guess_the_number_game.cpp
Ch03_Operators/integer_printout/: Makefile  integer_printout.cpp
Ch03_Operators/reverse_binary_printout/: reverse_binary_printout.cpp
Ch04_ControlStructures/computer_guesses_the_number/: computer_guesses_the_number.cpp
Ch05_Functions/odds_at_dice/: odds_at_dice.cpp
Ch05_Functions/print_ints/: print_ints.cpp
Ch06_PointersArraysAndReferences/sieve/: Makefile  sieve.cpp
Ch07_ClassesAndObjects/packed_boolean/: Pack_bool.cpp  Pack_bool.hpp  bit_sieve.cpp  packed_boolean.cpp
Ch09_CreatingAndUsingTemplates/type_promotion_2/: type_promotion_2.cpp
Ch12_MathTimeAndOtherLibraryFunctions/idiot_savant/: idiot_savant.cpp
